2005-08-24  Keith Packard  <keithp@keithp.com>

	reviewed by: cworth

	* src/cairo-gstate-private.h:
	* src/cairo-gstate.c: (_cairo_gstate_init),
	(_cairo_gstate_apply_device_transform),
	(_cairo_gstate_apply_device_inverse_transform),
	(_cairo_gstate_get_matrix), (_cairo_gstate_set_matrix),
	(_cairo_gstate_identity_matrix), (_cairo_gstate_user_to_backend),
	(_cairo_gstate_backend_to_user):
	* src/cairo-surface.c: (_cairo_surface_init),
	(cairo_surface_set_device_offset):
	* src/cairoint.h:
	Add device_x_scale and device_y_scale to
	surface so that the coordinate system seen
	by the backend can differ from the nominal
	device coordinate space used by the application.
	
	Useful for printer backends where the device
	coordinate space should be in pixels while the
	user visible device space is in points.

	There is no API to set these values; the backends
	using this functionality should do that themselves
	before the first cairo_t is created.

2005-08-24  Carl Worth  <cworth@cworth.org>

	* src/cairo.c: (cairo_show_text): Fix cairo_show_text to advance
	the current point. Add documentation for cairo_show_text.
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/show-text-current-point-ref.png:
	* test/show-text-current-point.c: (draw), (main): Add test to
	verify that the current-point-advancing behavior of
	cairo_show_text is working.

	* BUGS: Remove bug about cairo_show_text not advancing the current
	point.

2005-08-24  Carl Worth  <cworth@cworth.org>

	* src/cairo.c:

2005-08-23  Carl Worth  <cworth@cworth.org>

	* src/cairo.h: Minor doc edit.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* doc/public/tmpl/cairo-matrix.sgml: Minor doc edits.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* doc/public/tmpl/cairo-matrix.sgml:
	* doc/public/tmpl/cairo-status.sgml:
	* doc/public/tmpl/cairo-types.sgml:
	* doc/public/tmpl/cairo.sgml: Prefer cairo over Cairo when not at
	the beginning of a sentence.

2005-08-23  Billy Biggs  <vektor@dumbterm.net>
